Step 02 : Add messages

--- a/AkkaNetSampleStd/AkkaNetSampleStd.csproj
+++ b/AkkaNetSampleStd/AkkaNetSampleStd.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <Folder Include="Views\" />
     <Folder Include="ViewModels\" />
+    <Folder Include="Messages\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="2.5.1.444934" />
