--- a/AkkaNetSampleStd/AkkaNetSampleStd.csproj
+++ b/AkkaNetSampleStd/AkkaNetSampleStd.csproj
@@ -12,6 +12,7 @@
     <Folder Include="ViewModels\" />
     <Folder Include="Messages\" />
     <Folder Include="Actors\" />
+    <Folder Include="AkkaSystem\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="2.5.1.444934" />
